# usysml-textx

./: .gitignore  CHANGELOG.md  CONTRIBUTORS  LICENSE  README.md  link_tests.py  mkdocs.yml  runtests.sh  setup.cfg  setup.py
docs/: index.md
odt/: uSysML_Test_Cases.odt
tests/: conftest.py  test_cases.py
tests/test_0001/: VehicleExample01.sysml  VehicleExample01.txt  test_0001.py
tests/test_0002/: test0002.sysml  test0002.txt  test_0002.py
tests/test_0003/: test_0003.py
tests/test_0004/: test0004.sysml  test0004.txt  test_0004.py
tests/test_0005/: test0005.sysml  test0005.txt  test_0005.py
tests/test_0006/: test0006.sysml  test_0006.py
tests/test_0007/: test0007.sysml  test_0007.py
tests/test_0008/: test0008.sysml  test0008.txt  test_0008.py
tests/test_0009/: test0009.sysml  test0009.txt  test_0009.py
tests/test_01-001/: test_01-001.py  test_01-001.sysml
tests/test_01-002/: test_01-002.py  test_01-002.sysml
tests/test_01-003/: test_01-003.py  test_01-003.sysml
tests/test_01-004/: test_01-004.py  test_01-004.sysml
tests/test_01-005/: test_01-005.py  test_01-005.sysml
tests/test_01-006/: test_01-006.py  test_01-006.sysml
tests/test_01-007/: test_01-007.py  test_01-007.sysml
tests/test_01-008/: test_01-008.py  test_01-008.sysml
tests/test_02-001/: test_02-001.py  test_02-001.sysml
tests/test_base_structure/: VehicleExample03a.sysml  test_base_structure.py
tests/test_base_structure1/: VehicleExample01.sysml  VehicleExample01.txt  test_base_structure1.py
tests/test_fqn_reference/: VehicleExample03b.sysml  VehicleExample03b.txt  test_fqn_reference.py
tests/test_fqn_reference1/: VehicleExample03c.sysml  test_fqn_reference1.py
usysml/: __init__.py  semantics.py  usysml.tx  utils.py
(+4 files in other folders)
