[metadata]
name = usysml-textx
author = Vladimir Likić, Igor Dejanović
author_email = vlad DOT likic AT gmail, igor DOT dejanovic AT gmail
license = Commercial. See LICENSE.
description = A minimal implementation of SysML in Python/textX.
keywords = SysML, textX
url = 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = False
install_requires =
    textX
include_package_data = True
package_dir =
    usysml = usysml

[options.extras_require]
dev =
    textX-dev
    mkdocs
    mike
    wheel
    twine
test =
    flake8
    pytest

[options.package_data]
usysml = *.tx

[options.entry_points]
textx_languages =
    usysml = usysml:usysml_language

textx_generators =
    usysml_text = usysml:usysml_generate_text
    usysml_dot = usysml:usysml_generate_dot

[bdist_wheel]
universal = 1

[flake8]
exclude = .git/*,.eggs/*,build/*, dist/*, venv/*
max-line-length = 90
